# python-linter-doc

./: LICENSE  README.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
