[tool.poetry]
name = "python-linter-doc"
version = "0.1.0"
description = ""
authors = ["tkc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.15.0"
ruff = "^0.9.4"
pyright = "^1.1.393"
bandit = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
